--- a/schnarchen/test.html
+++ b/schnarchen/test.html
@@ -498,13 +498,16 @@
                         <p class="text-white font-medium leading-tight">NUR heute 70 % RABATT<br> + 30 Tage
                             Rückgaberecht</p>
                     </div>
-                    <a href="https://trk.mein-derila.de/click" id="cta-button"
-                        class="inline-block btn shadow-none no-underline rounded-lg leading-normal bg-purple-600 hover:bg-purple-700 py-3 text-white w-full mb-1 text-center font-bold transition-colors duration-200">
-                        JETZT PROBIEREN >>
+                    <a href="https://trk.mein-derila.de/click"
+                        class="block w-full h-[56px] px-4 text-lg font-bold text-white text-center bg-purple-600 hover:bg-purple-700 rounded-lg shadow transition-colors duration-200">
+                        👉 JETZT PROBIEREN >>
                     </a>
+
                     <div class="flex justify-center w-full mt-2">
                         <img src="https://statimage.com/prelanders/templates/ecom/img/payment.png?h=3c49f9e71b1902ad9810fc30af9b959e"
-                            alt="Zahlungsmethoden" class="max-w-[140px] h-5">
+                            alt="Zahlungsmethoden" width="140" height="20" loading="lazy"
+                            class="mx-auto object-contain" />
+
                     </div>
                 </div>
             </div>
