--- a/schnarchen/test.html
+++ b/schnarchen/test.html
@@ -267,11 +267,12 @@
                     Kissen, das mir endlich wieder ruhige Nächte schenkt – Nacht für Nacht.</p>
                 <div class="text-center mb-8">
                     <a class="block mt-8" id="cta-button" href="https://trk.mein-derila.de/click">
-                        <img class="w-full mx-auto aspect-[4/3] object-contain" loading="lazy"
-                            src="/img/kissen-details.webp"
-                            alt="Orthopädisches Derila Kissen mit Butterfly-Form und Memory-Schaum" width="800"
-                            height="600" />
-                    </a>
+                        <div class="w-full max-w-[800px] mx-auto aspect-[4/3] overflow-hidden">
+                            <img src="/img/kissen-details.webp"
+                                alt="Orthopädisches Derila Kissen mit Butterfly-Form und Memory-Schaum" width="800"
+                                height="600" loading="lazy" class="w-full h-full object-contain" />
+                        </div>
+
                 </div>
 
                 <section class="my-12 bg-yellow-50 p-6 rounded-lg shadow-inner">
@@ -489,15 +490,19 @@
                     <h2 class="font-bold mb-0 text-white text-lg md:text-xl lg:text-2xl">Die Methode Nr. 1 für
                         schnarchfreien Schlaf</h2>
                     <a href="https://trk.mein-derila.de/click" id="cta-button" class="block text-center my-2">
-                        <img loading="lazy" src="https://statimage.com/prelanders/images/sleep/deri-product.png?v=13"
-                            alt="Derila Kissen" class="mx-auto w-[240px] aspect-[1/1] object-contain" width="240"
-                            height="240" />
+                        <div class="w-[240px] h-[240px] mx-auto">
+                            <img src="/img/deri-product.png" alt="Derila Kissen" width="240" height="240" loading="lazy"
+                                class="w-full h-full object-contain" />
+                        </div>
+
                     </a>
                     <div class="text-center my-2 h-[32px]">
 
                         <p class="text-white font-medium leading-tight">NUR heute 70 % RABATT<br> + 30 Tage
                             Rückgaberecht</p>
                     </div>
+
+                    <div class="h-[60px]"></div>
                     <a href="https://trk.mein-derila.de/click"
                         class="block w-full h-[56px] px-4 text-lg font-bold text-white text-center bg-purple-600 hover:bg-purple-700 rounded-lg shadow transition-colors duration-200">
                         👉 JETZT PROBIEREN >>
