--- a/schnarchen/test.html
+++ b/schnarchen/test.html
@@ -496,15 +496,15 @@
                         </div>
 
                     </a>
-                    <div class="text-center my-2 h-[32px]">
-
-                        <p class="text-white font-medium leading-tight">NUR heute 70 % RABATT<br> + 30 Tage
-                            Rückgaberecht</p>
+                    <div
+                        class="text-center h-[56px] flex items-center justify-center px-4 text-base md:text-lg font-semibold text-white">
+                        NUR heute 70 % RABATT + 30 Tage Rückgaberecht
                     </div>
+
 
                     <div class="h-[60px]"></div>
                     <a href="https://trk.mein-derila.de/click"
-                        class="block w-full h-[56px] px-4 text-lg font-bold text-white text-center bg-purple-600 hover:bg-purple-700 rounded-lg shadow transition-colors duration-200">
+                        class="block w-full h-[56px] px-4 py-2 text-lg font-bold text-white text-center bg-purple-600 hover:bg-purple-700 rounded-lg shadow transition-colors duration-200">
                         👉 JETZT PROBIEREN >>
                     </a>
 
