--- a/schnarchen/test.html
+++ b/schnarchen/test.html
@@ -496,7 +496,7 @@
                         </div>
 
                     </a>
-                    <div class="text-center my-2 h-[32px]">
+                    <div class="text-center  h-[32px]">
 
                         <p class="text-white font-medium leading-tight">NUR heute 70 % RABATT<br> + 30 Tage
                             Rückgaberecht</p>
