--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -136,11 +136,14 @@
             <div class="max-w-3xl px-4 py-2 mx-auto bg-white shadow-sm">
                 <header class="my-10 text-center">
                     <h1 class="mb-4 text-4xl md:text-6xl font-bold leading-tight text-gray-900">
-                        Sie kam zurück ins Bett – dank diesem Kissen.
+                        <!-- Sie kam zurück ins Bett – dank diesem Kissen. -->
+                        Mein Schnarchen trieb sie weg – ein Kissen brachte sie zurück.
                     </h1>
                     <p class="text-xl md:text-2xl text-gray-800 mt-4 leading-snug max-w-3xl mx-auto">
-                        Meine Frau hörte mich zum ersten Mal wieder ruhig schlafen – Wie ein ergonomisches
-                        Butterfly-Kissen unsere Beziehung rettete. Jetzt mit 70% Rabatt.
+                        <!-- Meine Frau hörte mich zum ersten Mal wieder ruhig schlafen – Wie ein ergonomisches
+                        Butterfly-Kissen unsere Beziehung rettete. Jetzt mit 70% Rabatt. -->
+                        Was kein Spray, Gerät oder Arzt geschafft hat – hat ein Kissen in einer Nacht verändert.
+
                     </p>
                 </header>
 
@@ -164,7 +167,7 @@
                         class="w-full h-full object-cover" />
                 </div>
 
-                <article class="prose max-w-none text-lg md:text-xl leading-relaxed text-gray-800">
+                <!-- <article class="prose max-w-none text-lg md:text-xl leading-relaxed text-gray-800">
                     <p>Erst war es ein Witz zwischen uns.</p>
                     <p><em>„Du sägst den ganzen Wald um“,</em> sagte sie oft lachend.</p>
                     <p class="mt-2">Aber irgendwann… wurde es ernst. Sie schlief kaum noch. Ich wachte sabbernd, mit
@@ -173,7 +176,7 @@
                     <p class="mt-2 font-semibold text-red-600">In diesem Moment wusste ich: Ich muss etwas ändern.</p>
                 </article>
 
-                <!-- Video -->
+               
                 <div class="my-6 hidden md:block">
                     <video autoplay loop muted class="w-80 h-[150px] object-cover rounded shadow-md" preload="metadata">
                         <source src="/img/apnea-video.mp4" type="video/mp4" />
@@ -191,7 +194,39 @@
                         <li>Ich wurde gereizt, unkonzentriert – und zog mich immer mehr zurück</li>
                         <li>Bis sie schließlich sagte: „Ich kann so nicht mehr schlafen.“</li>
                     </ul>
+                </section> -->
+
+                <article class="prose max-w-none text-lg md:text-xl leading-relaxed text-gray-800">
+                    <p>Erst war es ein Witz zwischen uns.</p>
+                    <p><em>„Du sägst den ganzen Wald um“,</em> sagte sie oft – halb lachend, halb genervt.</p>
+                    <p class="mt-2">Aber mit der Zeit wurde es ernst. Sie schlief kaum noch. Ich wachte sabbernd auf,
+                        mit trockenem Mund und Druck auf der Brust.</p>
+                    <p>Eines Abends stand sie in der Tür, sah mich an und sagte nur: <em>„Ich schlafe heute im
+                            Gästezimmer… ich brauche Ruhe.“</em></p>
+                    <p class="mt-2 font-semibold text-red-600">In diesem Moment wurde mir klar: So kann es nicht
+                        weitergehen.</p>
+                    <p class="mt-4">Seitdem lag ich allein. Und merkte erst, wie sehr sie mir fehlte.</p>
+                </article>
+
+                <!-- Video -->
+                <div class="my-6 hidden md:block">
+                    <video autoplay loop muted class="w-80 h-[150px] object-cover rounded shadow-md" preload="metadata">
+                        <source src="/img/apnea-video.mp4" type="video/mp4" />
+                    </video>
+                </div>
+
+                <section class="my-10">
+                    <h2 class="text-3xl md:text-4xl font-bold mb-4">Ich dachte, es sei harmlos – aber es zerstörte mehr,
+                        als ich zugeben wollte</h2>
+                    <ul class="list-disc list-inside mt-4 space-y-2 text-lg md:text-xl text-gray-800">
+                        <li>Sie war übermüdet, gereizt – am Ende ihrer Kräfte</li>
+                        <li>Ich wachte jede Nacht mit Druck auf der Brust und offenem Mund auf</li>
+                        <li>Sie sagte, ich würde im Schlaf nach Luft ringen</li>
+                        <li>Ich war müde, unkonzentriert – und zog mich emotional zurück</li>
+                        <li>Und sie? Sie zog sich zurück. Still. Enttäuscht. Erschöpft.</li>
+                    </ul>
                 </section>
+
 
                 <section class="my-10">
                     <h2 class="text-3xl md:text-4xl font-bold mb-4">Ich probierte alles – aber nichts hat geholfen</h2>
@@ -276,7 +311,7 @@
                 </div>
 
 
-                <h2 class="text-2xl md:text-3xl font-bold mt-20">Darum funktioniert Derila wirklich</h2>
+                <!-- <h2 class="text-2xl md:text-3xl font-bold mt-20">Darum funktioniert Derila wirklich</h2>
                 <p class="font-bold my-2">Ich konnte mir nicht vorstellen, dass ein Kissen so einen Unterschied macht.
                     Aber genau das hat es getan – und inzwischen verstehe ich auch warum:</p>
                 <ul class="list-disc list-inside text-lg md:text-xl my-4 space-y-1">
@@ -297,7 +332,40 @@
                                 height="600" loading="lazy" class="w-full h-full object-contain" />
                         </div>
 
-                </div>
+                </div> -->
+
+                <section class="my-12 bg-white p-6 rounded-lg shadow-md border border-gray-200">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4">Was dieses Kissen in unserer Beziehung verändert hat
+                    </h2>
+                    <p class="text-lg md:text-xl mb-4 leading-relaxed">
+                        Ich hätte nie gedacht, dass ein Kissen unsere Beziehung retten kann – aber genau das ist
+                        passiert.
+                        Ich schlafe ruhiger, sie schläft wieder bei mir – und wir reden wieder mehr als je zuvor.
+                    </p>
+                    <p class="text-lg md:text-xl mb-6 leading-relaxed font-semibold text-gray-800">
+                        Wenn du auch wieder erholsamer schlafen willst – für dich und deine Partnerin – dann ist dieses
+                        Kissen der erste Schritt.
+                    </p>
+
+                    <div class="bg-yellow-50 p-4 rounded-lg shadow-inner mb-6">
+                        <h3 class="text-xl font-bold mb-2">Was dich jetzt auf der nächsten Seite erwartet:</h3>
+                        <ul class="list-disc list-inside text-lg md:text-xl space-y-2 text-gray-800">
+                            <li>✅ Das Original-Kissen mit <strong>70 % Rabatt</strong></li>
+                            <li>✅ Die einzigartige <strong>Butterfly-Form gegen Schnarchen</strong></li>
+                            <li>✅ Über <strong>5.000 echte Bewertungen</strong></li>
+                            <li>✅ <strong>30-Tage-Test</strong> ohne Risiko</li>
+                        </ul>
+                    </div>
+
+                    <div class="text-center">
+                        <a href="https://trk.mein-derila.de/click"
+                            class="inline-block bg-red-400 text-white text-lg md:text-xl font-bold px-8 py-4 rounded-full hover:bg-red-600 transition">
+                            👉 Jetzt zum offiziellen Shop & Rabatt sichern
+                        </a>
+                        <p class="text-sm mt-2 text-gray-500">Nur solange der Vorrat reicht</p>
+                    </div>
+                </section>
+
 
                 <section class="my-12 bg-yellow-50 p-6 rounded-lg shadow-inner">
                     <h2 class="text-2xl md:text-3xl font-bold mb-4">Warum Schnarchen nie harmlos ist</h2>
