--- a/schnarchen/verkauftsich.html
+++ b/schnarchen/verkauftsich.html
@@ -137,13 +137,12 @@
                 <header class="my-10 text-center">
                     <h1 class="mb-4 text-4xl md:text-6xl font-bold leading-tight text-gray-900">
                         <!-- Sie kam zurück ins Bett – dank diesem Kissen. -->
-                        <!-- Mein Schnarchen trieb sie weg – ein Kissen brachte sie zurück. -->
-                        Warum dieses Kissen Ehen rettet
+                        Mein Schnarchen trieb sie weg – ein Kissen brachte sie zurück.
                     </h1>
                     <p class="text-xl md:text-2xl text-gray-800 mt-4 leading-snug max-w-3xl mx-auto">
                         <!-- Meine Frau hörte mich zum ersten Mal wieder ruhig schlafen – Wie ein ergonomisches
                         Butterfly-Kissen unsere Beziehung rettete. Jetzt mit 70% Rabatt. -->
-                        Wie eine einfache Änderung im Schlafzimmer alles verändert hat
+                        Was kein Spray, Gerät oder Arzt geschafft hat – hat ein Kissen in einer Nacht verändert.
 
                     </p>
                 </header>
@@ -197,16 +196,17 @@
                     </ul>
                 </section> -->
 
-                <article class="prose max-w-none text-lg md:text-xl leading-relaxed text-gray-800 mt-10">
+                <article class="prose max-w-none text-lg md:text-xl leading-relaxed text-gray-800">
                     <p>Erst war es ein Witz zwischen uns.</p>
-                    <p><em>„Du sägst den ganzen Wald um“</em>, sagte sie oft lachend.</p>
-                    <p class="mt-2">Doch irgendwann wurde es ernst. Sie schlief kaum noch. Ich wachte sabbernd, mit
-                        trockenem Mund und Druck auf der Brust auf.</p>
-                    <p>Bis sie eines Abends sagte: <em>„Ich schlafe heute im Gästezimmer… ich brauche Ruhe.“</em></p>
-                    <p class="mt-2 font-semibold text-red-600">Seitdem war da nur noch ein leerer Platz neben mir – und
-                        das Gefühl, dass ich sie verloren hatte.</p>
+                    <p><em>„Du sägst den ganzen Wald um“,</em> sagte sie oft – halb lachend, halb genervt.</p>
+                    <p class="mt-2">Aber mit der Zeit wurde es ernst. Sie schlief kaum noch. Ich wachte sabbernd auf,
+                        mit trockenem Mund und Druck auf der Brust.</p>
+                    <p>Eines Abends stand sie in der Tür, sah mich an und sagte nur: <em>„Ich schlafe heute im
+                            Gästezimmer… ich brauche Ruhe.“</em></p>
+                    <p class="mt-2 font-semibold text-red-600">In diesem Moment wurde mir klar: So kann es nicht
+                        weitergehen.</p>
+                    <p class="mt-4">Seitdem lag ich allein. Und merkte erst, wie sehr sie mir fehlte.</p>
                 </article>
-
 
                 <!-- Video -->
                 <div class="my-6 hidden md:block">
@@ -216,18 +216,16 @@
                 </div>
 
                 <section class="my-10">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-4">Ich hielt das alles für harmlos – aber es belastete
-                        unsere Beziehung</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold mb-4">Ich dachte, es sei harmlos – aber es zerstörte mehr,
+                        als ich zugeben wollte</h2>
                     <ul class="list-disc list-inside mt-4 space-y-2 text-lg md:text-xl text-gray-800">
-                        <li>Meine Frau schlief kaum noch – sie war am Ende ihrer Nerven</li>
-                        <li>Ich wachte mit trockenem Mund, sabbernd und mit Druck auf der Brust auf</li>
+                        <li>Sie war übermüdet, gereizt – am Ende ihrer Kräfte</li>
+                        <li>Ich wachte jede Nacht mit Druck auf der Brust und offenem Mund auf</li>
                         <li>Sie sagte, ich würde im Schlaf nach Luft ringen</li>
-                        <li>Ich wurde gereizt, unkonzentriert – und zog mich immer mehr zurück</li>
-                        <li>Bis sie schließlich sagte: „Ich kann so nicht mehr schlafen.“</li>
+                        <li>Ich war müde, unkonzentriert – und zog mich emotional zurück</li>
+                        <li>Und sie? Sie zog sich zurück. Still. Enttäuscht. Erschöpft.</li>
                     </ul>
                 </section>
-
-
 
 
                 <section class="my-10">
@@ -313,7 +311,28 @@
                 </div>
 
 
+                <!-- <h2 class="text-2xl md:text-3xl font-bold mt-20">Darum funktioniert Derila wirklich</h2>
+                <p class="font-bold my-2">Ich konnte mir nicht vorstellen, dass ein Kissen so einen Unterschied macht.
+                    Aber genau das hat es getan – und inzwischen verstehe ich auch warum:</p>
+                <ul class="list-disc list-inside text-lg md:text-xl my-4 space-y-1">
+                    <li class="font-bold">👉 Die spezielle Form bringt meinen Kopf genau in die Position, in der meine
+                        Atemwege frei bleiben</li>
+                    <li class="font-bold">👉 Der Memory-Schaum passt sich perfekt an – selbst wenn ich mich im Schlaf
+                        oft drehe</li>
+                    <li class="font-bold">👉 Mein Arzt war erst skeptisch – jetzt empfiehlt er es sogar anderen
+                        Patienten mit Schlafapnoe</li>
+                </ul>
+                <p class="text-lg md:text-xl my-4">Kein Schlauch. Kein Gerät. Kein Druck auf der Brust.<br>Nur ein
+                    Kissen, das mir endlich wieder ruhige Nächte schenkt – Nacht für Nacht.</p>
+                <div class="text-center mb-8">
+                    <a class="block mt-8" id="cta-button" href="https://trk.mein-derila.de/click">
+                        <div class="w-full max-w-[800px] mx-auto aspect-[4/3] overflow-hidden">
+                            <img src="/img/kissen-details.webp"
+                                alt="Orthopädisches Derila Kissen mit Butterfly-Form und Memory-Schaum" width="800"
+                                height="600" loading="lazy" class="w-full h-full object-contain" />
+                        </div>
 
+                </div> -->
 
                 <section class="my-12 bg-white p-6 rounded-lg shadow-md border border-gray-200">
                     <h2 class="text-2xl md:text-3xl font-bold mb-4">Was dieses Kissen in unserer Beziehung verändert hat
@@ -349,26 +368,22 @@
 
 
                 <section class="my-12 bg-yellow-50 p-6 rounded-lg shadow-inner">
-                    <h2 class="text-2xl md:text-3xl font-bold mb-4">Schnarchen ist nicht harmlos – es ist ein
-                        Alarmsignal</h2>
+                    <h2 class="text-2xl md:text-3xl font-bold mb-4">Warum Schnarchen nie harmlos ist</h2>
                     <p class="text-lg md:text-xl leading-relaxed text-gray-800">
-                        Wenn du im Schlaf nicht richtig atmest, leidet dein ganzer Körper – oft über Jahre, ohne dass du
-                        es merkst.
+                        Wenn du im Schlaf nicht frei atmen kannst, leidet dein ganzer Körper – oft, ohne dass du es
+                        merkst.
                     </p>
                     <p class="mt-4 text-lg md:text-xl text-gray-800">
-                        Herz, Kreislauf, Gehirn, Immunsystem – alle bekommen zu wenig Sauerstoff. Du wachst gerädert
-                        auf, wirst schneller krank, fühlst dich wie ein Schatten deiner selbst.
+                        Zu wenig Sauerstoff für Herz, Gehirn, Immunsystem. Du wachst müde auf, wirst schneller krank,
+                        fühlst dich wie ein Schatten deiner selbst.
                     </p>
                     <p class="mt-4 text-lg md:text-xl text-gray-800">
-                        Die Ursache? Oft einfach: Dein Kopf liegt falsch. Deine Atemwege knicken ab, der Rachen verengt
-                        sich – das Schnarchen beginnt.
+                        Der Grund? Häufig ganz simpel: Dein Kopf liegt falsch. Die Atemwege knicken ab.
                     </p>
                     <p class="mt-4 text-lg md:text-xl text-gray-800 font-semibold">
-                        Genau hier setzt Derila an: Es bringt deine Schlafhaltung wieder in Balance – sanft, natürlich,
-                        ohne Maske oder Gerät.
+                        Derila bringt deinen Körper zurück in Balance – ganz ohne Gerät, Maske oder Operation.
                     </p>
                 </section>
-
 
                 <section class="my-10">
                     <h2 class="text-2xl md:text-3xl font-bold mb-2">Sie hatten dieselben Probleme – und jetzt dieselbe
