--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -140,8 +140,8 @@
                         <!-- Mein Schnarchen trieb sie weg – ein Kissen brachte sie zurück. -->
                     </h1>
                     <p class="text-xl md:text-2xl text-gray-800 mt-4 leading-snug max-w-3xl mx-auto">
-                        Meine Frau hörte mich zum ersten Mal wieder ruhig schlafen – Wie ein ergonomisches
-                        Butterfly-Kissen unsere Beziehung rettete. Jetzt mit 70% Rabatt.
+                        Meine Frau hörte mich zum ersten Mal wieder ruhig schlafen – <br>Wie ein ergonomisches
+                        Butterfly-Kissen unsere Beziehung rettete.<br> Jetzt mit 70% Rabatt.
                         <!-- Was kein Spray, Gerät oder Arzt geschafft hat – hat ein Kissen in einer Nacht verändert. -->
 
                     </p>
@@ -158,7 +158,7 @@
                     <p class="author pr-3">✅ Fachlich geprüft von Daniel T., spezialisiert auf klinische
                         Schlafdiagnostik</p>
                     <small class="text-gray-500 block mt-1 w-full"><span class="inline-block mr-1">📅</span>
-                        21.07.2025</small>
+                        05.08.2025</small>
                 </div>
 
                 <div class="max-w-4xl mx-auto mb-10 rounded shadow-md overflow-hidden aspect-[16/10]">
